crates/lexer/src/tests/snapshots/comment_trailing.snap
---
source: crates/lexer/src/tests.rs
assertion_line: 150
expression: "(test[1], tokens)"
---
- "\nlet foo = 13\n// line2"
- Ok:
    - tt: Let
      line: 2
      column: 1
    - tt:
        Ident: foo
      line: 2
      column: 5
    - tt:
        Op: Assign
      line: 2
      column: 9
    - tt:
        Num: "13"
      line: 2
      column: 11
    - tt:
        Semicolon: true
      line: 2
      column: 13

