crates/lexer/src/tests/snapshots/cond_if_else.snap
---
source: crates/lexer/src/tests.rs
assertion_line: 63
expression: "(test[1], tokens)"
---
- "\nif x > -3 {\n    print(x)\n} else {\n    exit()\n}\n"
- Ok:
    - tt: If
      line: 2
      column: 1
    - tt:
        Ident: x
      line: 2
      column: 4
    - tt:
        Op: Gt
      line: 2
      column: 6
    - tt:
        Op: Sub
      line: 2
      column: 8
    - tt:
        Num: "3"
      line: 2
      column: 9
    - tt: OpenBrace
      line: 2
      column: 11
    - tt:
        Ident: print
      line: 3
      column: 5
    - tt: OpenParen
      line: 3
      column: 10
    - tt:
        Ident: x
      line: 3
      column: 11
    - tt: CloseParen
      line: 3
      column: 12
    - tt:
        Semicolon: true
      line: 3
      column: 13
    - tt: CloseBrace
      line: 4
      column: 1
    - tt: Else
      line: 4
      column: 3
    - tt: OpenBrace
      line: 4
      column: 8
    - tt:
        Ident: exit
      line: 5
      column: 5
    - tt: OpenParen
      line: 5
      column: 9
    - tt: CloseParen
      line: 5
      column: 10
    - tt:
        Semicolon: true
      line: 5
      column: 11
    - tt: CloseBrace
      line: 6
      column: 1
    - tt:
        Semicolon: true
      line: 6
      column: 2

