crates/lexer/src/tests/snapshots/let_bool_true.snap
---
source: crates/lexer/src/tests.rs
assertion_line: 120
expression: "(test[1], tokens)"
---
- "let d: bool = true"
- Ok:
    - tt: Let
      line: 1
      column: 1
    - tt:
        Ident: d
      line: 1
      column: 5
    - tt: Colon
      line: 1
      column: 6
    - tt:
        VarType: Bool
      line: 1
      column: 8
    - tt:
        Op: Assign
      line: 1
      column: 13
    - tt:
        Bool: true
      line: 1
      column: 15
    - tt:
        Semicolon: true
      line: 1
      column: 16

